force-app/main/default/objects/Amendment__c/Amendment__c.object-meta.xml
<CustomObject>
    <label>Amendment</label>
    <nameField>
        <displayFormat>AM-{0000}</displayFormat>
        <label>Amendment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Amendments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>