force-app/main/default/objects/Amendment__c/fields/Date_Financing_Statement_Done__c.field-meta.xml
<CustomField>
    <fullName>Date_Financing_Statement_Done__c</fullName>
    <label>Registration Date</label>
    <type>Date</type>
</CustomField>