force-app/main/default/objects/Amendment__c/fields/Date_Financing_Statement_Expires__c.field-meta.xml
<CustomField>
    <fullName>Date_Financing_Statement_Expires__c</fullName>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>