force-app/main/default/objects/Amendment__c/fields/Renewal_date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_date__c</fullName>
    <formula>Date(YEAR(Date_Financing_Statement_Expires__c), (MONTH(Date_Financing_Statement_Expires__c) - 1), DAY(Date_Financing_Statement_Expires__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal date</label>
    <type>Date</type>
</CustomField>