force-app/main/default/objects/Amendment__c/fields/Renewal_Date_New__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Date_New__c</fullName>
    <description>This field was created to store the new renewal date from the opportunity. Old version of renewal date is calculated, Dom requested to have it as an open field.</description>
    <label>Renewal Date - New</label>
    <type>Date</type>
</CustomField>